feat: added delete route, edited Readme
